// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sparse data > returns insufficient_data without a score when fewer than 6 weeks have runs 1`] = `
{
  "as_of": "2024-06-29",
  "assumptions": {
    "body_fat_source": "health",
    "course": null,
    "expected_temp_c": null,
    "goal_time_source": "race_goal",
    "max_hr": 190,
    "max_hr_note": null,
    "max_hr_source": "user",
    "sex_source": "profile",
  },
  "caveats": [
    "Estimates come from population formulas and heuristics, not measured physiology; individual error is real.",
    "The likelihood is a modelled probability of finishing at or under the goal time given the recorded data. It is not a guarantee, a medical assessment or a training prescription.",
    "Confidence describes how complete and trustworthy the data is. It is reported separately and does not change the likelihood.",
    "Modifier sizes, sigmas and confidence weights are heuristics until calibrated by backtest.",
  ],
  "confidence": {
    "components": [
      {
        "max": 25,
        "name": "race_effort",
        "points": 25,
        "reason": "tagged half marathon, 2 weeks old",
        "status": "full",
      },
      {
        "max": 15,
        "name": "training_continuity",
        "points": 2.5,
        "reason": "4 of the last 16 weeks with runs; longest gap 85 days",
        "status": "partial",
      },
      {
        "max": 15,
        "name": "long_run_evidence",
        "points": 0,
        "reason": "0 run(s) of 30 km or more with splits (full credit at 3)",
        "status": "none",
      },
      {
        "max": 10,
        "name": "hr_coverage",
        "points": 10,
        "reason": "100% of run minutes with HR (17 run(s) from raw streams, 0 judged from the workout summary)",
        "status": "full",
      },
      {
        "max": 10,
        "name": "prior_marathon",
        "points": 0,
        "reason": "no prior marathon detected",
        "status": "none",
      },
      {
        "max": 5,
        "name": "max_hr_source",
        "points": 5,
        "reason": "max HR provided by the user",
        "status": "full",
      },
      {
        "max": 5,
        "name": "decoupling_runs",
        "points": 0,
        "reason": "0 long steady flat run(s) usable for decoupling (full credit at 2)",
        "status": "none",
      },
      {
        "max": 5,
        "name": "fueling_logged",
        "points": 0,
        "reason": "carbohydrates logged on 0 run(s) of 90 minutes or more (not logged does not mean not eaten)",
        "status": "none",
      },
      {
        "max": 10,
        "name": "time_to_race",
        "points": 10,
        "reason": "2 weeks to the race",
        "status": "full",
      },
    ],
    "percent": 53,
  },
  "data_gaps": [
    "Only 4 of the last 16 weeks have runs; at least 6 are needed.",
    "Heart-rate artefact check by cadence is not available; only implausible or flat heart-rate traces are flagged.",
    "E2_prior_marathon: No prior marathon found in the last 36 months.",
    "E3_training_based: Only 4 of the last 8 weeks have runs (need 6).",
  ],
  "mode": "race_window",
  "race": {
    "date": "2024-07-13",
    "days_until": 14,
    "goal_pace_per_km": "5:20",
    "goal_time": "3:45:00",
    "id": "chicago-marathon-2024",
    "name": "Chicago Marathon",
  },
  "status": "insufficient_data",
}
`;

exports[`under-trained runner with a slow tagged 10K > matches the snapshot 1`] = `
{
  "adjustments": [],
  "as_of": "2024-06-29",
  "assumptions": {
    "body_fat_source": "health",
    "course": null,
    "expected_temp_c": null,
    "goal_time_source": "race_goal",
    "max_hr": 190,
    "max_hr_note": null,
    "max_hr_source": "user",
    "sex_source": "profile",
  },
  "benchmarks": [
    {
      "context": "no prior marathon block",
      "evidence": "moderate",
      "metric": "avg_weekly_km_12wk",
      "value": 40.8,
    },
    {
      "context": "benchmark from the spec: a longest run of 25 km or more (the supporting study has not been verified)",
      "evidence": "moderate",
      "metric": "longest_run_km_12wk",
      "value": 12,
    },
    {
      "context": "no prior marathon block",
      "evidence": "moderate",
      "metric": "runs_30km_or_more_12wk",
      "value": 0,
    },
    {
      "context": "context only, not used in the estimate: no runs recorded before the block",
      "evidence": "moderate",
      "metric": "avg_weekly_km_base_52wk",
      "value": null,
    },
    {
      "context": "of 0 runs of 90 minutes or more in the block; not logged does not mean not eaten (context only)",
      "evidence": "weak",
      "metric": "long_runs_with_carbs_logged",
      "value": 0,
    },
    {
      "context": "of 16",
      "evidence": "weak",
      "metric": "weeks_with_runs_16wk",
      "value": 16,
    },
  ],
  "block_comparison": {
    "body_mass_kg_now_vs_prior": [
      null,
      null,
    ],
    "pace_at_same_hr": null,
    "prior_marathon": null,
    "runs_30k_now_vs_prior": [
      0,
      null,
    ],
    "runs_read_in_detail": {
      "current_window": [
        25,
        25,
      ],
      "prior_window": null,
    },
    "speed_at_75pct_hrmax_ratio": null,
    "speed_at_marathon_effort_ratio": null,
    "volume_based_repeat": null,
    "weekly_km_now_vs_prior": [
      40.8,
      null,
    ],
  },
  "caveats": [
    "Estimates come from population formulas and heuristics, not measured physiology; individual error is real.",
    "The likelihood is a modelled probability of finishing at or under the goal time given the recorded data. It is not a guarantee, a medical assessment or a training prescription.",
    "Confidence describes how complete and trustworthy the data is. It is reported separately and does not change the likelihood.",
    "Modifier sizes, sigmas and confidence weights are heuristics until calibrated by backtest.",
    "Race-day weather is not modelled (pass expected_temp_c to include heat).",
    "No course profile was given, so the course is treated as flat (pass course for a rolling or hilly course).",
    "Race-day fueling, pacing and crowd congestion are not modelled; the race-day uncertainty term covers typical effects.",
    "The estimators disagree by about 20 minutes, so the uncertainty was widened.",
    "The estimators share one runner, so the combined uncertainty was held at 85% of the best single estimator.",
  ],
  "confidence": {
    "components": [
      {
        "max": 25,
        "name": "race_effort",
        "points": 18,
        "reason": "tagged 10K, 2 weeks old",
        "status": "partial",
      },
      {
        "max": 15,
        "name": "training_continuity",
        "points": 15,
        "reason": "16 of the last 16 weeks with runs",
        "status": "full",
      },
      {
        "max": 15,
        "name": "long_run_evidence",
        "points": 0,
        "reason": "0 run(s) of 30 km or more with splits (full credit at 3)",
        "status": "none",
      },
      {
        "max": 10,
        "name": "hr_coverage",
        "points": 10,
        "reason": "100% of run minutes with HR (65 run(s) from raw streams, 0 judged from the workout summary)",
        "status": "full",
      },
      {
        "max": 10,
        "name": "prior_marathon",
        "points": 0,
        "reason": "no prior marathon detected",
        "status": "none",
      },
      {
        "max": 5,
        "name": "max_hr_source",
        "points": 5,
        "reason": "max HR provided by the user",
        "status": "full",
      },
      {
        "max": 5,
        "name": "decoupling_runs",
        "points": 0,
        "reason": "0 long steady flat run(s) usable for decoupling (full credit at 2)",
        "status": "none",
      },
      {
        "max": 5,
        "name": "fueling_logged",
        "points": 0,
        "reason": "carbohydrates logged on 0 run(s) of 90 minutes or more (not logged does not mean not eaten)",
        "status": "none",
      },
      {
        "max": 10,
        "name": "time_to_race",
        "points": 10,
        "reason": "2 weeks to the race",
        "status": "full",
      },
    ],
    "percent": 58,
  },
  "data_gaps": [
    "Heart-rate artefact check by cadence is not available; only implausible or flat heart-rate traces are flagged.",
    "E2_prior_marathon: No prior marathon found in the last 36 months.",
    "Durability check "long_run_decoupling" is unknown: 0 qualifying run(s); need 2.",
    "Durability check "goal_pace_segment" is unknown: no analysed runs of 20 km or more with splits.",
    "Durability check "hr_at_goal_pace_late_in_long_runs" is unknown: no splits after km 25 at goal pace with heart rate.",
    "Running history before the 16-week block covers 0 of the 52 weeks wanted for the long-term base; the base figure uses the weeks available.",
  ],
  "estimators": [
    {
      "available": true,
      "inputs": {
        "R": 1.151,
        "R_source": "volume_adjusted",
        "effort_inferred": false,
        "source_age_weeks": 2,
        "source_distance_m": 10000,
        "source_time": "0:58:00",
        "workout_ids": [
          "tenk-slow",
        ],
      },
      "name": "E1_race_conversion",
      "notes": [
        "Source is a race the runner tagged.",
        "Exponent adjusted +0.02 for volume (41 km/week, 0 runs of 30 km or more).",
      ],
      "predicted": "4:44:10",
      "sigma_pct": 5,
      "weight": 0.588,
    },
    {
      "available": false,
      "inputs": {},
      "name": "E2_prior_marathon",
      "notes": [
        "No prior marathon found in the last 36 months.",
      ],
      "predicted": null,
      "sigma_pct": null,
      "weight": null,
    },
    {
      "available": true,
      "inputs": {
        "body_fat_pct": 14,
        "body_fat_source": "health",
        "mean_training_pace_s_per_km": 387,
        "mean_weekly_km_8wk": 41.3,
      },
      "name": "E3_training_based",
      "notes": [
        "Population formula derived from recreational men (Tanda & Knechtle 2013); low weight.",
      ],
      "predicted": "4:02:32",
      "sigma_pct": 7,
      "weight": 0.412,
    },
  ],
  "likelihood": {
    "label": "very unlikely",
    "probability": 0.026,
    "score_0_10": 0.3,
  },
  "mode": "race_window",
  "modifiers": [
    {
      "applied_pct": 0,
      "benchmark": "median decoupling < 5% over the last 3 qualifying runs of 25 km or more (steady, flat, not hot)",
      "check": "long_run_decoupling",
      "detail": "0 qualifying run(s); need 2",
      "evidence": "weak",
      "status": "unknown",
      "value": null,
    },
    {
      "applied_pct": 2,
      "benchmark": "3 or more runs of 30 km in the last 12 weeks",
      "check": "runs_30km_or_more",
      "evidence": "moderate",
      "status": "not_met",
      "value": 0,
    },
    {
      "applied_pct": 0,
      "benchmark": "a continuous stretch of 10 km or more at goal pace (within 3%) inside a run of 20 km or more",
      "check": "goal_pace_segment",
      "detail": "no analysed runs of 20 km or more with splits",
      "evidence": "weak",
      "status": "unknown",
      "value": null,
    },
    {
      "applied_pct": 0,
      "benchmark": "HR at goal pace after km 25 of long runs at or below 90% of max HR",
      "check": "hr_at_goal_pace_late_in_long_runs",
      "detail": "no splits after km 25 at goal pace with heart rate",
      "evidence": "weak",
      "status": "unknown",
      "value": null,
    },
  ],
  "plain_language": {
    "confidence_note": "The confidence percentage measures how complete the data is; it is not the chance of meeting the goal.",
    "driver": "Before the durability checks (heuristics, weak evidence) the estimate is 4:27:01 with a 4% chance; the checks add 5.3 min and take the chance to 3%.",
    "fitness": null,
    "gaps_that_matter": [
      "Race-day temperature was not given: see temperature_scenarios.",
      "Course profile was not given: treated as flat.",
      "Fuelling is not logged (this says nothing about what the runner actually ate).",
    ],
    "headline": "3% modelled chance of finishing in 3:45:00 or faster ("very unlikely" is just the band of that probability). Predicted finish 4:32:22; 8 in 10 outcomes fall between 4:01:07 and 5:03:36.",
    "validation": "The model has been checked against one marathon only and its probabilities have not been calibrated across runners.",
  },
  "prediction": {
    "central": "4:32:22",
    "central_before_durability": "4:27:01",
    "durability_adjustment_pct": 2,
    "probability_before_durability": 0.042,
    "range_80": [
      "4:01:07",
      "5:03:36",
    ],
    "sigma_pct": 8.95,
  },
  "race": {
    "date": "2024-07-13",
    "days_until": 14,
    "goal_pace_per_km": "5:20",
    "goal_time": "3:45:00",
    "id": "chicago-marathon-2024",
    "name": "Chicago Marathon",
  },
  "status": "ok",
  "temperature_scenarios": [
    {
      "central": "4:32:22",
      "probability": 0.026,
      "temp_c": 10,
    },
    {
      "central": "4:32:22",
      "probability": 0.026,
      "temp_c": 15,
    },
    {
      "central": "4:37:48",
      "probability": 0.016,
      "temp_c": 20,
    },
    {
      "central": "4:43:15",
      "probability": 0.01,
      "temp_c": 25,
    },
  ],
}
`;

exports[`well-prepared runner, tagged half marathon, race in 14 days > matches the snapshot 1`] = `
{
  "adjustments": [],
  "as_of": "2024-06-29",
  "assumptions": {
    "body_fat_source": "health",
    "course": null,
    "expected_temp_c": null,
    "goal_time_source": "race_goal",
    "max_hr": 190,
    "max_hr_note": null,
    "max_hr_source": "user",
    "sex_source": "profile",
  },
  "benchmarks": [
    {
      "context": "no prior marathon block",
      "evidence": "moderate",
      "metric": "avg_weekly_km_12wk",
      "value": 57.3,
    },
    {
      "context": "benchmark from the spec: a longest run of 25 km or more (the supporting study has not been verified)",
      "evidence": "moderate",
      "metric": "longest_run_km_12wk",
      "value": 34,
    },
    {
      "context": "no prior marathon block",
      "evidence": "moderate",
      "metric": "runs_30km_or_more_12wk",
      "value": 6,
    },
    {
      "context": "context only, not used in the estimate: no runs recorded before the block",
      "evidence": "moderate",
      "metric": "avg_weekly_km_base_52wk",
      "value": null,
    },
    {
      "context": "of 16 runs of 90 minutes or more in the block; not logged does not mean not eaten (context only)",
      "evidence": "weak",
      "metric": "long_runs_with_carbs_logged",
      "value": 0,
    },
    {
      "context": "of 16",
      "evidence": "weak",
      "metric": "weeks_with_runs_16wk",
      "value": 16,
    },
  ],
  "block_comparison": {
    "body_mass_kg_now_vs_prior": [
      null,
      null,
    ],
    "pace_at_same_hr": null,
    "prior_marathon": null,
    "runs_30k_now_vs_prior": [
      6,
      null,
    ],
    "runs_read_in_detail": {
      "current_window": [
        25,
        25,
      ],
      "prior_window": null,
    },
    "speed_at_75pct_hrmax_ratio": null,
    "speed_at_marathon_effort_ratio": null,
    "volume_based_repeat": null,
    "weekly_km_now_vs_prior": [
      57.3,
      null,
    ],
  },
  "caveats": [
    "Estimates come from population formulas and heuristics, not measured physiology; individual error is real.",
    "The likelihood is a modelled probability of finishing at or under the goal time given the recorded data. It is not a guarantee, a medical assessment or a training prescription.",
    "Confidence describes how complete and trustworthy the data is. It is reported separately and does not change the likelihood.",
    "Modifier sizes, sigmas and confidence weights are heuristics until calibrated by backtest.",
    "Race-day weather is not modelled (pass expected_temp_c to include heat).",
    "No course profile was given, so the course is treated as flat (pass course for a rolling or hilly course).",
    "Race-day fueling, pacing and crowd congestion are not modelled; the race-day uncertainty term covers typical effects.",
  ],
  "confidence": {
    "components": [
      {
        "max": 25,
        "name": "race_effort",
        "points": 25,
        "reason": "tagged half marathon, 3 weeks old",
        "status": "full",
      },
      {
        "max": 15,
        "name": "training_continuity",
        "points": 15,
        "reason": "16 of the last 16 weeks with runs",
        "status": "full",
      },
      {
        "max": 15,
        "name": "long_run_evidence",
        "points": 15,
        "reason": "6 run(s) of 30 km or more with splits (full credit at 3)",
        "status": "full",
      },
      {
        "max": 10,
        "name": "hr_coverage",
        "points": 10,
        "reason": "100% of run minutes with HR (65 run(s) from raw streams, 0 judged from the workout summary)",
        "status": "full",
      },
      {
        "max": 10,
        "name": "prior_marathon",
        "points": 0,
        "reason": "no prior marathon detected",
        "status": "none",
      },
      {
        "max": 5,
        "name": "max_hr_source",
        "points": 5,
        "reason": "max HR provided by the user",
        "status": "full",
      },
      {
        "max": 5,
        "name": "decoupling_runs",
        "points": 5,
        "reason": "8 long steady flat run(s) usable for decoupling (full credit at 2)",
        "status": "full",
      },
      {
        "max": 5,
        "name": "fueling_logged",
        "points": 0,
        "reason": "carbohydrates logged on 0 run(s) of 90 minutes or more (not logged does not mean not eaten)",
        "status": "none",
      },
      {
        "max": 10,
        "name": "time_to_race",
        "points": 10,
        "reason": "2 weeks to the race",
        "status": "full",
      },
    ],
    "percent": 85,
  },
  "data_gaps": [
    "Heart-rate artefact check by cadence is not available; only implausible or flat heart-rate traces are flagged.",
    "E2_prior_marathon: No prior marathon found in the last 36 months.",
    "Durability check "hr_at_goal_pace_late_in_long_runs" is unknown: no splits after km 25 at goal pace with heart rate.",
    "Running history before the 16-week block covers 0 of the 52 weeks wanted for the long-term base; the base figure uses the weeks available.",
  ],
  "estimators": [
    {
      "available": true,
      "inputs": {
        "R": 1.131,
        "R_source": "default",
        "effort_inferred": false,
        "source_age_weeks": 3,
        "source_distance_m": 21097.5,
        "source_time": "1:43:30",
        "workout_ids": [
          "hm-race1",
        ],
      },
      "name": "E1_race_conversion",
      "notes": [
        "Source is a race the runner tagged.",
      ],
      "predicted": "3:46:40",
      "sigma_pct": 3.5,
      "weight": 0.782,
    },
    {
      "available": false,
      "inputs": {},
      "name": "E2_prior_marathon",
      "notes": [
        "No prior marathon found in the last 36 months.",
      ],
      "predicted": null,
      "sigma_pct": null,
      "weight": null,
    },
    {
      "available": true,
      "inputs": {
        "body_fat_pct": 14,
        "body_fat_source": "health",
        "mean_training_pace_s_per_km": 334,
        "mean_weekly_km_8wk": 58.4,
      },
      "name": "E3_training_based",
      "notes": [
        "Population formula derived from recreational men (Tanda & Knechtle 2013); low weight.",
      ],
      "predicted": "3:34:51",
      "sigma_pct": 7,
      "weight": 0.218,
    },
  ],
  "likelihood": {
    "label": "toss-up",
    "probability": 0.537,
    "score_0_10": 5.4,
  },
  "mode": "race_window",
  "modifiers": [
    {
      "applied_pct": 0,
      "benchmark": "median decoupling < 5% over the last 3 qualifying runs of 25 km or more (steady, flat, not hot)",
      "check": "long_run_decoupling",
      "detail": "3 runs",
      "evidence": "weak",
      "status": "met",
      "value": 3,
    },
    {
      "applied_pct": 0,
      "benchmark": "3 or more runs of 30 km in the last 12 weeks",
      "check": "runs_30km_or_more",
      "evidence": "moderate",
      "status": "met",
      "value": 6,
    },
    {
      "applied_pct": 0,
      "benchmark": "a continuous stretch of 10 km or more at goal pace (within 3%) inside a run of 20 km or more",
      "check": "goal_pace_segment",
      "detail": "12 run(s) examined",
      "evidence": "weak",
      "status": "met",
      "value": 21,
    },
    {
      "applied_pct": 0,
      "benchmark": "HR at goal pace after km 25 of long runs at or below 90% of max HR",
      "check": "hr_at_goal_pace_late_in_long_runs",
      "detail": "no splits after km 25 at goal pace with heart rate",
      "evidence": "weak",
      "status": "unknown",
      "value": null,
    },
  ],
  "plain_language": {
    "confidence_note": "The confidence percentage measures how complete the data is; it is not the chance of meeting the goal.",
    "driver": "No durability penalty was applied; the estimate is 3:44:06.",
    "fitness": null,
    "gaps_that_matter": [
      "Race-day temperature was not given: see temperature_scenarios.",
      "Course profile was not given: treated as flat.",
      "Fuelling is not logged (this says nothing about what the runner actually ate).",
    ],
    "headline": "54% modelled chance of finishing in 3:45:00 or faster ("toss-up" is just the band of that probability). Predicted finish 3:44:06; 8 in 10 outcomes fall between 3:31:44 and 3:56:28.",
    "validation": "The model has been checked against one marathon only and its probabilities have not been calibrated across runners.",
  },
  "prediction": {
    "central": "3:44:06",
    "central_before_durability": "3:44:06",
    "durability_adjustment_pct": 0,
    "probability_before_durability": 0.537,
    "range_80": [
      "3:31:44",
      "3:56:28",
    ],
    "sigma_pct": 4.31,
  },
  "race": {
    "date": "2024-07-13",
    "days_until": 14,
    "goal_pace_per_km": "5:20",
    "goal_time": "3:45:00",
    "id": "chicago-marathon-2024",
    "name": "Chicago Marathon",
  },
  "status": "ok",
  "temperature_scenarios": [
    {
      "central": "3:44:06",
      "probability": 0.537,
      "temp_c": 10,
    },
    {
      "central": "3:44:06",
      "probability": 0.537,
      "temp_c": 15,
    },
    {
      "central": "3:48:35",
      "probability": 0.359,
      "temp_c": 20,
    },
    {
      "central": "3:53:03",
      "probability": 0.224,
      "temp_c": 25,
    },
  ],
}
`;
